added and env file for sensetive info cleaned some of the .gitignore files and added password change

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,5 @@
 __pycache__/
 *.py[cod]
 *$py.class
-Shooztars/__pycache__/__init__.cpython-312.pyc
-Shooztars/__pycache__/settings.cpython-312.pyc
-Shooztars/__pycache__/urls.cpython-312.pyc
-Shooztars/__pycache__/wsgi.cpython-312.pyc
-store/__pycache__/admin.cpython-312.pyc
-store/__pycache__/__init__.cpython-312.pyc
-store/__pycache__/apps.cpython-312.pyc
-store/__pycache__/models.cpython-312.pyc
-store/__pycache__/urls.cpython-312.pyc
-store/__pycache__/views.cpython-312.pyc
-store/migrations/__pycache__/__init__.cpython-312.pyc
-store/migrations/__pycache__/0001_initial.cpython-312.pyc
-store/migrations/__pycache__/0002_product_image.cpython-312.pyc
-store/migrations/__pycache__/0003_rename_shippingadress_shippingaddress.cpython-312.pyc
-store/migrations/__pycache__/0004_remove_shippingaddress_state.cpython-312.pyc
-store/migrations/__pycache__/0005_alter_product_price.cpython-312.pyc
 db.sqlite3
+.env
